# syncmail

./: .gitignore  README.md  pyproject.toml
src/syncmail/: __init__.py  __version__.py  main.py
